@@ -1527,4 +1527,49 @@ function wfUrlProtocols() {
 	return implode( '|', $x );
 }
 
+/**
+ * Check if a string is well-formed XML.
+ * Must include the surrounding tag.
+ *
+ * @param string $text
+ * @return bool
+ *
+ * @todo Error position reporting return
+ */
+function wfIsWellFormedXml( $text ) {
+	$parser = xml_parser_create( "UTF-8" );
+	
+	# case folding violates XML standard, turn it off
+	xml_parser_set_option( $parser, XML_OPTION_CASE_FOLDING, false );
+	
+	if( !xml_parse( $parser, $text, true ) ) {
+		$err = xml_error_string( xml_get_error_code( $parser ) );
+		$position = xml_get_current_byte_index( $parser );
+		//$fragment = $this->extractFragment( $html, $position );
+		//$this->mXmlError = "$err at byte $position:\n$fragment";
+		xml_parser_free( $parser );
+		return false;
+	}
+	xml_parser_free( $parser );
+	return true;
+}
+
+/**
+ * Check if a string is a well-formed XML fragment.
+ * Wraps fragment in an <html> bit and doctype, so it can be a fragment
+ * and can use HTML named entities.
+ *
+ * @param string $text
+ * @return bool
+ */
+function wfIsWellFormedXmlFragment( $text ) {
+	$html = 
+		'<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" ' .
+		'"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">' .
+		'<html>' .
+		$text .
+		'</html>';
+	return wfIsWellFormedXml( $html );
+}
+
 ?>
