@@ -622,6 +622,7 @@ Your account has been created. Don't forget to change your {{SITENAME}} preferen
 'yourlanguage'	=> 'Language:',
 'yourvariant'  => 'Variant',
 'yournick'		=> 'Nickname:',
+'badsig'		=> 'Invalid raw signature; check HTML tags.',
 'email'			=> 'Email',
 'emailforlost'		=> "Fields marked with superscripts are optional.  Storing an email address enables people to contact you through the website without you having to reveal your
 email address to them, and it can be used to send you a new password if you forget it.<br /><br />Your real name, if you choose to provide it, will be used for giving you attribution for your work.",
